+.更新修改移动组件网络通信 +.输入事件可以被一个数据表重写. +.一些代码微调 +.这次并没有session更新

--- a/EveryThing/Config/DefaultEngine.ini
+++ b/EveryThing/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 EditorStartupMap=/Game/EveryThing/Levels/L_Test.L_Test
 GameDefaultMap=/Game/EveryThing/Levels/L_Test.L_Test
 GlobalDefaultGameMode="/Script/EveryThing.EveryThingGameMode"
+GameInstanceClass=/Game/EveryThing/Blueprints/BPI_EveryThing.BPI_EveryThing_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -50,3 +51,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
