+.添加了一些未知的ue4类.会用到但不会用 +.项目需求更新

--- a/EveryThing/Config/DefaultEngine.ini
+++ b/EveryThing/Config/DefaultEngine.ini
@@ -11,6 +11,9 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/Engine.Engine]
+GameSingletonClassName=None
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
