--- a/EveryThing/Config/DefaultInput.ini
+++ b/EveryThing/Config/DefaultInput.ini
@@ -57,6 +57,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="NumberFour",Key=Four,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectNextAttackActor",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectLastAttackActor",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="TogglePawnSkin",Key=N,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
