+.模型修改 +.实现切换角色中

--- a/EveryThing/Config/DefaultInput.ini
+++ b/EveryThing/Config/DefaultInput.ini
@@ -60,6 +60,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="SelectLastAttackActor",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToggleGameMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ToggleGameMenu",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="TogglePawn",Key=B,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
