+.聊天框功能基本实现

--- a/EveryThing/Config/DefaultInput.ini
+++ b/EveryThing/Config/DefaultInput.ini
@@ -55,8 +55,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Number",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectNextAttackActor",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectLastAttackActor",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="ToggleGameMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="ToggleGameMenu",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DisplayGameMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="DisplayGameMenu",Key=Z,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="TogglePawn",Key=B,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Number",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Number",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -67,6 +67,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Number",Key=Eight,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Number",Key=Nine,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Number",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="FocusToChatWindow",Key=Enter,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="Turn",Key=MouseX,Scale=1.000000)
