+.淡入淡出效果添加

--- a/EveryThing/Config/DefaultEngine.ini
+++ b/EveryThing/Config/DefaultEngine.ini
@@ -5,12 +5,6 @@
 DefaultPlatformService=Null
 
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
-GameDefaultMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
-GlobalDefaultGameMode="/Script/EveryThing.EveryThingGameMode"
-GameInstanceClass=/Game/EveryThing/Blueprints/BPI_EveryThing.BPI_EveryThing_C
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -19,6 +13,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
 GameSingletonClassName=None
+GameViewportClientClassName=/Script/EveryThing.EveryThingGameViewportClient
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -61,4 +56,17 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/EveryThing/Blueprints/BPI_EveryThing.BPI_EveryThing_C
+GameDefaultMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/EveryThing.EveryThingGameMode
+GlobalDefaultServerGameMode=None
 
