--- a/EveryThing/Config/DefaultEngine.ini
+++ b/EveryThing/Config/DefaultEngine.ini
@@ -15,6 +15,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 GameSingletonClassName=None
 GameViewportClientClassName=/Script/EveryThing.EveryThingGameViewportClient
 
+# +ActiveClassRedirects=(OldClassName="EveryThingGameMode",NewClassName="EveryThingGameMode_Game") 
+
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
 LocalMapOptions=
