#.移动组件优化,修复不同帧率下移动效果差距及大的bug,(解决方法,锁帧.-_-) #.锁帧30.

--- a/EveryThing/Config/DefaultEngine.ini
+++ b/EveryThing/Config/DefaultEngine.ini
@@ -16,6 +16,9 @@ GameSingletonClassName=None
 GameViewportClientClassName=/Script/EveryThing.EveryThingGameViewportClient
 
 # +ActiveClassRedirects=(OldClassName="EveryThingGameMode",NewClassName="EveryThingGameMode_Game") 
+MinDesiredFrameRate=30.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=30.000000))
+bUseFixedFrameRate=True
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/EveryThing/Levels/L_MainMenu.L_MainMenu
@@ -63,13 +66,11 @@ bDisableActiveActors=False
 bDisableCCD=False
 bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
-bSubsteppingAsync=False
+bSubstepping=True
+bSubsteppingAsync=True
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
